bk_ida/gccida/g0/dwarf2out_abstract_function
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dwarf2out_abstract_function/src/dwarf2out.c:10601:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dwarf2out_abstract_function/src/dwarf2out.c:10603:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *decla; // [rsp+8h] [rbp-28h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dwarf2out_abstract_function/src/dwarf2out.c:10604:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *save_fn; // [rsp+10h] [rbp-20h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dwarf2out_abstract_function/src/dwarf2out.c:10605:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *context; // [rsp+18h] [rbp-18h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dwarf2out_abstract_function/src/dwarf2out.c:10618:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dwarf2out_abstract_function/src/obj/dwarf2out.o] Error 1
